namespace AlloroTechnologies.Humita.Domain.Entities;

public enum AccessModifier
{
    None = 0,
    Private = 1,
    Protected = 2,
    Internal = 3,
    ProtectedInternal = 4,
    PrivateInternal = 5,
    Public = 6
}