namespace AlloroTechnologies.Humita.Domain.Entities;

public enum FileType
{
    None = 0,
    DomainClassesDiagram = 1
}