namespace AlloroTechnologies.Humita.Domain.Entities;

public interface IValidatable
{
    bool IsValid { get; }
}