namespace AlloroTechnologies.Humita.Domain.Entities;

public enum Modifier
{
    None = 0,
    Static = 1,
    Abstract = 2
}